[package]
name = "webb-cli"
version = "0.1.0"
authors = [
   "Webb Developers <drew@webb.tools>",
   "Shady Khalifa <shekohex@gmail.com>"
]
edition = "2018"


[[bin]]
name = "webb"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
async-std = "1.8"
async-trait = "0.1"
log = "0.4"
subxt = { version = "0.14", package = "substrate-subxt" }
thiserror = "1.0"
zeroize = "^1"
tiny-bip39 = "0.8"
uuid = { version = "0.8", features = ["v4"] }
codec = { package = "parity-scale-codec", version = "1.3.6", features = ["derive", "full"] }
rand = "0.8"
sha2 = "0.9"
hex = "0.4"
url = "2.2"

# Pallets
frame-support = "2.0.1"

# CLI
anyhow = { version = "1.0", optional = true }
env_logger = { version = "0.8", optional = true }
structopt = { version = "0.3", optional = true, features = ["paw"] }
paw = { version = "1.0", optional = true }
sled = { version = "0.34", optional = true }
directories-next = { version = "2.0", optional = true }
prost = { version = "0.7", optional = true }
secrecy = { version = "0.7", optional = true }
argon2 = { version = "0.1", optional = true }
chacha = { version = "0.7", optional = true, package = "chacha20poly1305" }
console = { version = "0.13", optional = true }
indicatif = { version = "0.15", optional = true }
dialoguer = { version = "0.7", optional = true }

# Anon
curve25519-dalek = "3.0.0"
merlin = "2.0.0"

[dependencies.curve25519-gadgets]
version = "2.0.0"
git = "https://github.com/webb-tools/anon"
rev = "5c530cf2"

[dependencies.bulletproofs]
branch = "main"
version = "2.0.0"
git = "https://github.com/edgeware-builders/bulletproofs"
default-features = false
features = ["yoloproofs"]

[features]
default = []
cli = [
   "structopt",
   "paw",
   "env_logger",
   "anyhow",
   "async-std/attributes",
   "sled",
   "directories-next",
   "prost",
   "secrecy",
   "argon2",
   "chacha",
   "console",
   "indicatif",
   "dialoguer",
]
integration-tests = []

[dev-dependencies]
async-std = { version = "1.8", features = ["attributes"] }
sp-keyring = "2.0.1"

