[package]
name = "webb-cli"
version = "0.1.0-beta.2"
authors = [
   "Webb Developers <drew@webb.tools>",
   "Shady Khalifa <shekohex@gmail.com>",
]
edition = "2021"


[[bin]]
name = "webb"
path = "src/main.rs"
required-features = ["cli"]

[[bench]]
name = "mixer"
harness = false

[dependencies]
async-trait = "0.1"
tracing = "0.1"
thiserror = "1.0"
zeroize = "^1"
tiny-bip39 = "0.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
url = "2.2"
typed-builder = "0.9.1"

# Arkworks
ark-ff = { version = "^0.3.0", default-features = true }
ark-serialize = "0.3.0"
ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [
   "r1cs",
] }
ark-ed-on-bn254 = { version = "^0.3.0", default-features = true, features = [
   "r1cs",
] }
ark-bn254 = { version = "^0.3.0", default-features = true, features = [
   "curve",
] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [
   "curve",
] }
ark-std = { version = "^0.3.0" }
arkworks-gadgets = { version = "0.4.18", default-features = true }
arkworks-circuits = { version = "0.4.18", default-features = false }
arkworks-utils = { version = "0.4.18", default-features = false }

# Runtime
tokio = { version = "^1", features = ["full"] }
# SDK
webb = { git = "https://github.com/webb-tools/webb-rs.git", rev = "4037988", default-features = false }
webb-pedersen-hash = { git = "https://github.com/webb-tools/webb-rs.git", rev = "4037988", default-features = false }
# CLI
anyhow = { version = "1.0", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = [
   "env-filter",
] }
structopt = { version = "0.3", optional = true, features = ["paw"] }
paw = { version = "1.0", optional = true }
sled = { version = "0.34", optional = true }
directories-next = { version = "2.0", optional = true }
prost = { version = "0.9", optional = true }
secrecy = { version = "0.8", optional = true }
chacha = { version = "0.9", optional = true, package = "chacha20poly1305" }
console = { version = "0.15", optional = true }
indicatif = { version = "0.16", optional = true }
dialoguer = { version = "0.9", optional = true }
serde_json = { version = "1", optional = true }


[features]
default = []
cli = [
   "structopt",
   "paw",
   "tracing-subscriber",
   "anyhow",
   "sled",
   "directories-next",
   "prost",
   "secrecy",
   "chacha",
   "console",
   "indicatif",
   "dialoguer",
   "serde_json",
   "webb/substrate-runtime",
]
integration-tests = []

[dev-dependencies]
sp-keyring = "4.0.0"
criterion = "0.3"
